# Constrained

./: README.md  exceptions.ipynb  gauss.ipynb  linked_list.ipynb  main.py  neural_net.ipynb  test.ipynb
constrained/: __init__.py  ast.py  constraints.py  core.py  primitive.py  svg.py  widget.py  z3solver.py
constrained-app/: .gitignore  package-lock.json  package.json
constrained-app/public/: global.css  index.html
constrained-app/src/: App.svelte  Canvas.svelte  Controls.svelte  Diagram.svelte
constrained-app/src-tauri/: Cargo.toml  tauri.conf.json
constrained-app/src-tauri/src/: constraint.rs  main.rs  primitive.rs
constrained-app/src/model/: constraint.ts  diagram.ts  options.ts  primitive.ts
constrained-core/: .gitignore  Cargo.toml  diagram.cst
constrained-core/src/: diagram.rs  lib.rs  main.rs
constrained-core/src/ast/: builtin.rs  expression.rs  mod.rs  object.rs
constrained-core/src/paint/: mod.rs
constrained-core/src/parser/: lexer.rs  mod.rs
constrained-core/src/solve/: grad_solver.rs  mod.rs  z3_solver.rs
constrained-py/: exceptions.ipynb  gauss.ipynb
constrained-py/constrained/: __init__.py  ast.py  constraints.py  core.py  primitive.py  z3solver.py
constrained/diff/: autograd.py  diffsolver.py
