[package]
name = "constrained-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = { git = "https://github.com/raskr/rust-autograd" }
svg = "0.10"
z3 = { git = "https://github.com/prove-rs/z3.rs", features = ["static-link-z3"] }
fraction = "0.10"