[package]
name = "constrained-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = { git = "https://github.com/raskr/rust-autograd" }
svg = "0.10"
z3 = { git = "https://github.com/Feuermagier/z3.rs" }
z3-sys = { git = "https://github.com/Feuermagier/z3.rs" }
logos = "0.12"
thiserror = "1.0"
log = "0.4"